--- a/index.html
+++ b/index.html
@@ -17,6 +17,26 @@
     <p class="tagline">Landing you a hand in times of need</p>
   </header>
 
+
+
+
+
+  <header class="background-header">
+  <img src="backgrd.jpg" alt="" class="header-bg">
+  <div class="logo">
+    <img src="logo.png" alt="Zamela Logo">
+    <h1>Zamela Cashloans</h1>
+  </div>
+  <p class="tagline">Landing you a hand in times of need</p>
+</header>
+
+  
+
+
+
+
+
+  
   <!-- HERO IMAGE -->
   <section class="hero-image">
     <img src="hero.jpg" alt="Happy customer holding loan approval">
@@ -132,3 +152,4 @@
 
 </body>
 </html>
+
