--- a/index.html
+++ b/index.html
@@ -184,6 +184,31 @@
     <p>Privacy Policy | Terms & Conditions</p>
   </footer>
 
+
+
+
+
+
+
+
+
+<!-- Visitor's Counter -->
+<div style="text-align:center; font-family:sans-serif; margin-top:20px;">
+  <span>Visitors:</span>
+  <script type="text/javascript" src="https://www.freevisitorcounters.com/auth.php?id=1f7ebaf786fa7e0b9e089f4ce67ff2fb63538c89"></script>
+  <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1376459/t/13"></script>
+</div>
+
+
+
+
+
+
+
+
+
+    
+
   <!-- BASIC JS FOR LOAN CALCULATOR -->
   <script>
     function calculateLoan() {
@@ -207,6 +232,7 @@
 
 </body>
 </html>
+
 
 
 
