--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     
  
   <div class="logo">
-    <img src="logo.png" alt="Zamela Logo">
+    <img src="backgroundhero_2.png" alt="Zamela Logo">
     <h1>Zamela Cashloans</h1>
   </div>
   
@@ -232,6 +232,7 @@
 
 </body>
 </html>
+
 
 
 
