--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 
  
   
-<!-- MAIN TOP HEADER -->
+<!-- MAIN TOP HEADER - COLOUR -->
 <!--  <header class="Color-background-header">
   <div class="header-bg"></div> -->
     
- 
-  <div class="logo">
-    <img src="backgroundhero_2.png" alt="Zamela Logo">
-    <h1>Zamela Cashloans</h1>
+ <!-- MAIN TOP HEADER IMAGE -->
+  <header>
+  <div class="background"> 
+    <img src="backgroundhero_2.png" alt="Background Image"> 
+
+    <div class="logo">
+      <img src="logo.png" alt="Company Logo"> 
+    </div> 
+
+    <h1 class="zamela">Zamela Cashloans</h1>
   </div>
-  
+
   <p class="tagline">Landing you a hand in times of need</p>
 </header>
-  
-
-
-
-
-
   
   <!-- HAPPY IMAGE -->
   <section class="happy-image">
@@ -232,6 +232,7 @@
 
 </body>
 </html>
+
 
 
 
