--- a/index.html
+++ b/index.html
@@ -15,19 +15,22 @@
   <div class="header-bg"></div> -->
     
  <!-- MAIN TOP HEADER IMAGE -->
-  <header>
-  <div class="background"> 
-    <img src="backgroundhero_2.png" alt="Background Image"> 
-
-    <div class="logo">
-      <img src="logo.png" alt="Company Logo"> 
-    </div> 
-
+ <div class="background">
+  <img src="backgroundhero_2.png" alt="Background Image">
+  <div class="header-content">
+    <img class="logo" src="logo.png" alt="Company Logo">
     <h1 class="zamela">Zamela Cashloans</h1>
+    <p class="tagline">"Landing you a hand in times of need"</p>
   </div>
+</div>
 
-  <p class="tagline">Landing you a hand in times of need</p>
-</header>
+
+
+
+
+
+
+
   
   <!-- HAPPY IMAGE -->
   <section class="happy-image">
@@ -232,6 +235,7 @@
 
 </body>
 </html>
+
 
 
 
