--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
   <div class="header-bg"></div> -->
     
  <!-- MAIN TOP HEADER IMAGE -->
- <div class="background">
-  <img src="backgroundhero_2.png" alt="Background Image">
+<!-- <div class="background">
+  <img src="backgroundhero_2.png" alt="Background Image">  -->
+   
   <div class="header-content">
     <img class="logo" src="logo.png" alt="Company Logo">
     <h1 class="zamela">Zamela Cashloans</h1>
@@ -235,6 +236,7 @@
 
 </body>
 </html>
+
 
 
 
