--- a/index.html
+++ b/index.html
@@ -18,12 +18,17 @@
 <!-- <div class="background">
   <img src="backgroundhero_2.png" alt="Background Image">  -->
    
+  <div class="background">
+  <img src="backgroundhero_2.png" alt="Background Image">
   <div class="header-content">
     <img class="logo" src="logo.png" alt="Company Logo">
     <h1 class="zamela">Zamela Cashloans</h1>
-    <p class="tagline">"Landing you a hand in times of need"</p>
+    <p class="tagline">Landing you a hand in times of need</p>
   </div>
 </div>
+
+
+
 
 
 
@@ -236,6 +241,7 @@
 
 </body>
 </html>
+
 
 
 
