--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <div class="background">
   <img src="backgroundhero_2.png" alt="Background Image">
   <div class="header-content">
-    <img class="logo" src="logo.png" alt="Company Logo">
+    <img src="logo.png" alt="Company Logo" class="logo">
     <h1 class="zamela">Zamela Cashloans</h1>
     <p class="tagline">Landing you a hand in times of need</p>
   </div>
@@ -241,6 +241,7 @@
 
 </body>
 </html>
+
 
 
 
